2005-07-11  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that the cairo_content_t work is done.
	Note progress on cairo_meta_surface_t, ARGB text, and group
	support.
	Add recent API change proposals (cairo_ft_options_t,
	cairo_xlib_surface_create needs to be screen aware, and
	cairo_xlib_surface_set_drawable).

	* src/cairo-arc.c (_arc_segments_needed): Note that this function
	is computing an incorrect result.

2005-07-08  Carl Worth  <cworth@cworth.org>

	* src/cairo.h: Give enum tags an underscore prefix to match the
	style of the struct tags. Add new cairo_content_t and change
	cairo_surface_create_similar to accept a cairo_content_t rather
	than a cairo_format_t.

	* src/cairoint.h:
	* src/cairo-glitz-surface.c: (_cairo_glitz_surface_create_similar):
	* src/cairo-image-surface.c: (_cairo_image_surface_create_similar):
	* src/cairo-meta-surface.c: (_cairo_meta_surface_create_similar):
	* src/cairo-pdf-surface.c: (_cairo_pdf_surface_create_similar):
	* src/cairo-ps-surface.c: (_cairo_ps_surface_create_similar):
	* src/cairo-quartz-surface.c: (_cairo_quartz_surface_create_similar):
	* src/cairo-surface.c: (_cairo_surface_create_similar_scratch),
	(cairo_surface_create_similar),
	(_cairo_surface_create_similar_solid):
	* src/cairo-win32-surface.c: (_cairo_win32_surface_create_similar),
	(_cairo_win32_surface_get_subimage):
	* src/cairo-xcb-surface.c: (_cairo_xcb_surface_create_similar),
	(_cairo_xcb_surface_clone_similar):
	* src/cairo-xlib-surface.c: (_cairo_xlib_surface_create_similar),
	(_cairo_xlib_surface_clone_similar): Change surface backend
	create_similar call to accept a cairo_content_t rather than a
	cairo_format_t.
	
	* src/cairo-glitz-surface.c: (_glitz_format_from_content),
	(_cairo_glitz_surface_clone_similar),
	(_cairo_glitz_pattern_acquire_surface),
	(_cairo_glitz_surface_fill_rectangles),
	(_cairo_glitz_surface_composite_trapezoids):
	* src/cairo-gstate.c: (_cairo_gstate_mask),
	(_composite_traps_intermediate_surface),